# EasyRTC

.github/workflows/: build.yml
signalserver-rust/: Cargo.toml  signalserver.ini
signalserver-rust/.cargo/: config.toml
signalserver-rust/src/: config.rs  main.rs  peer.rs  protocol.rs  sdp.rs
signalserver-rust/ssl/: example.crt  example.key
